// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render Button component 1`] = `
<button
  className="button  primary"
  type="button"
>
  test button
</button>
`;

exports[`Button component should render Button component with className props 1`] = `
<button
  className="button test_class primary"
  type="button"
>
  test button
</button>
`;

exports[`Button component should render Button component with type props 1`] = `
<button
  className="button  primary"
  type="submit"
>
  test button
</button>
`;

exports[`Button component should render Button component with variant props 1`] = `
<button
  className="button  secondary"
  type="button"
>
  test button
</button>
`;
